web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-expression/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,21)
1|(function() { yield 3; })
 |                   ^
